Actualizacion backend- crear/ver movimientos

--- a/src/main/resources/static/verMovimientos.html
+++ b/src/main/resources/static/verMovimientos.html
@@ -34,8 +34,9 @@
 </nav>
 <!--Fin nav / barra de navegación-->
 <!--Inicio contenido-->
-<main class="main-container-crear">
-  <section class="section-crearMovimiento">
+<main class="main-container-ver">
+  <tbody>
+  <section class="section-verMovimiento">
     <table class="table" id="movimientos">
       <thead>
       <tr>
@@ -48,8 +49,6 @@
         <th>Acciones</th>
       </tr>
       </thead>
-      <tbody>
-
       </tbody>
     </table>
 
